--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -10,115 +10,46 @@ on:
   pull_request:
     branches: 
       - master
-    types: [opened, synchronize, reopened]
   workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Environment to deploy to'
-        required: true
-        default: 'staging'
-        type: choice
-        options:
-          - staging
-          - production
 
 env:
   NODE_VERSION: '18'
-  CACHE_DEPENDENCY_PATH: 'package-lock.json'
 
 jobs:
-  # Job 1: Code Quality & Security Checks
-  code-quality:
-    name: Code Quality & Security
+  # Job 1: Basic Checks
+  lint-and-test:
+    name: Lint & Test
     runs-on: ubuntu-latest
     timeout-minutes: 10
     
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          cache-dependency-path: ${{ env.CACHE_DEPENDENCY_PATH }}
 
       - name: Install Dependencies
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci || npm install
 
-      - name: Lint Code
+      - name: Run Linting
         run: |
-          npm run lint || echo "::warning::Linting issues found"
-          
-      - name: Check Code Formatting
-        run: |
-          npm run format:check || echo "::warning::Code formatting issues found"
+          npm run lint || echo "::warning::No lint script found"
 
-      - name: Type Check (TypeScript)
+      - name: Run Tests
         run: |
-          npm run type-check || npx tsc --noEmit || echo "::warning::TypeScript errors found"
+          npm test || npm run test || echo "::warning::No test script found"
 
-      - name: Security Audit
-        run: |
-          npm audit --audit-level=moderate || echo "::warning::Security vulnerabilities found"
-
-  # Job 2: Unit Tests
-  unit-tests:
-    name: Unit Tests
+  # Job 2: Playwright E2E Tests
+  playwright-tests:
+    name: Playwright Tests
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    needs: code-quality
+    needs: lint-and-test
     
-    strategy:
-      matrix:
-        node-version: [16, 18, 20]
-      fail-fast: false
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-
-      - name: Install Dependencies
-        run: npm ci --prefer-offline --no-audit
-
-      - name: Run Unit Tests
-        run: |
-          npm run test:unit || npm test || echo "::error::Unit tests failed"
-
-      - name: Generate Coverage Report
-        run: |
-          npm run test:coverage || echo "::warning::Coverage report generation failed"
-
-      - name: Upload Coverage to Codecov
-        uses: codecov/codecov-action@v3
-        if: matrix.node-version == 18
-        with:
-          file: ./coverage/lcov.info
-          flags: unittests
-          name: codecov-umbrella
-
-  # Job 3: E2E Tests with Playwright
-  e2e-tests:
-    name: E2E Tests (Playwright)
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    needs: code-quality
-    
-    strategy:
-      matrix:
-        browser: [chromium, firefox, webkit]
-        shard: [1/4, 2/4, 3/4, 4/4]
-      fail-fast: false
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -130,134 +61,30 @@ jobs:
           cache: 'npm'
 
       - name: Install Dependencies
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci || npm install
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps ${{ matrix.browser }}
+      - name: Install Playwright
+        run: npx playwright install --with-deps chromium
 
       - name: Run Playwright Tests
-        run: npx playwright test --project=${{ matrix.browser }} --shard=${{ matrix.shard }}
+        run: npx playwright test
         env:
           CI: true
-          PLAYWRIGHT_BROWSERS_PATH: ~/.cache/ms-playwright
 
-      - name: Upload Playwright Report
+      - name: Upload Test Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: playwright-report-${{ matrix.browser }}-${{ strategy.job-index }}
+          name: playwright-report
           path: playwright-report/
-          retention-days: 10
-
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: test-results-${{ matrix.browser }}-${{ strategy.job-index }}
-          path: test-results/
-          retention-days: 5
-
-  # Job 4: Build Application
-  build:
-    name: Build Application
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    needs: [code-quality, unit-tests]
-    
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install Dependencies
-        run: npm ci --prefer-offline --no-audit
-
-      - name: Build Application
-        run: |
-          npm run build || echo "::error::Build failed"
-        env:
-          NODE_ENV: production
-
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: |
-            dist/
-            build/
-            .next/
           retention-days: 7
 
-  # Job 5: Performance & Bundle Analysis
-  performance:
-    name: Performance Analysis
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    needs: build
-    if: github.event_name == 'pull_request'
-    
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install Dependencies
-        run: npm ci --prefer-offline --no-audit
-
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifacts
-
-      - name: Bundle Size Analysis
-        run: |
-          npm run analyze || echo "::warning::Bundle analysis failed"
-
-      - name: Performance Budget Check
-        run: |
-          npm run perf:budget || echo "::warning::Performance budget exceeded"
-
-  # Job 6: Deploy to Staging
-  deploy-staging:
-    name: Deploy to Staging
+  # Job 3: Build Check
+  build:
+    name: Build Check
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    needs: [unit-tests, e2e-tests, build]
-    if: github.ref == 'refs/heads/master'
-    environment: staging
-    
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifacts
-
-      - name: Deploy to Staging
-        run: |
-          echo " Deploying to staging environment..."
-          # Add your deployment commands here
-          echo " Staging deployment completed"
-
-  # Job 7: Integration Tests (Post-Deploy)
-  integration-tests:
-    name: Integration Tests
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    needs: deploy-staging
-    if: github.ref == 'refs/heads/master'
+    needs: lint-and-test
     
     steps:
       - name: Checkout Repository
@@ -270,45 +97,28 @@ jobs:
           cache: 'npm'
 
       - name: Install Dependencies
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci || npm install
 
-      - name: Run Integration Tests
+      - name: Build Project
         run: |
-          npm run test:integration || echo "::error::Integration tests failed"
-        env:
-          TEST_ENV: staging
-          BASE_URL: https://staging.yourapp.com
+          npm run build || npx tsc || echo "::warning::No build script found"
 
-  # Job 8: Notification & Reporting
-  notify:
-    name: Notify Team
+  # Job 4: Summary
+  summary:
+    name: Pipeline Summary
     runs-on: ubuntu-latest
-    needs: [unit-tests, e2e-tests, build, deploy-staging]
+    needs: [lint-and-test, playwright-tests, build]
     if: always()
     
     steps:
-      - name: Determine Status
-        id: status
-        run: |
-          if [[ "${{ needs.unit-tests.result }}" == "success" && "${{ needs.e2e-tests.result }}" == "success" && "${{ needs.build.result }}" == "success" ]]; then
-            echo "status=success" >> $GITHUB_OUTPUT
-            echo "message=✅ All checks passed! Ready for production." >> $GITHUB_OUTPUT
-          else
-            echo "status=failure" >> $GITHUB_OUTPUT
-            echo "message=❌ Some checks failed. Please review the pipeline." >> $GITHUB_OUTPUT
-          fi
-
       - name: Create Summary
         run: |
-          echo "## Pipeline Summary " >> $GITHUB_STEP_SUMMARY
+          echo "##  Pipeline Results" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
           echo "**Author:** ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Status:** ${{ steps.status.outputs.message }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Job Results:" >> $GITHUB_STEP_SUMMARY
-          echo "- Code Quality: ${{ needs.code-quality.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Unit Tests: ${{ needs.unit-tests.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "- E2E Tests: ${{ needs.e2e-tests.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "### Job Status:" >> $GITHUB_STEP_SUMMARY
+          echo "- Lint & Test: ${{ needs.lint-and-test.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Playwright Tests: ${{ needs.playwright-tests.result }}" >> $GITHUB_STEP_SUMMARY  
           echo "- Build: ${{ needs.build.result }}" >> $GITHUB_STEP_SUMMARY
