--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -7,218 +7,33 @@ on:
     branches: [master]
   workflow_dispatch:
 
-env:
-  NODE_VERSION: '18'
-
 jobs:
-  # Job 1: Run Tests
   test:
-    name: Run Tests
+    name: Test & Check
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 10
     
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          node-version: '18'
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test
 
-      - name: Install Dependencies
-        run: npm ci || npm install
-
-      - name: Run Unit Tests
-        run: |
-          npm test || npm run test || echo "::warning::No unit tests found"
-
-      - name: Install Playwright
-        run: npx playwright install chromium
-
-      - name: Run E2E Tests
-        run: npx playwright test
-
-      - name: Upload Test Report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-report
-          path: playwright-report/
-          retention-days: 7
-
-  # Job 2: Build Application
-  build:
-    name: Build Application
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    needs: test
-    
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install Dependencies
-        run: npm ci || npm install
-
-      - name: Build Project
-        run: |
-          npm run build || npx tsc || echo "::error::Build failed"
-        env:
-          NODE_ENV: production
-
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-files
-          path: |
-            dist/
-            build/
-            out/
-          retention-days: 7
-
-  # Job 3: Deploy to Staging
-  deploy-staging:
-    name: Deploy to Staging
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    needs: [test, build]
-    if: github.ref == 'refs/heads/master'
-    environment: staging
-    
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-files
-
-      - name: Deploy to Staging
-        run: |
-          echo " Starting deployment to staging..."
-          # Add your deployment commands here
-          # Examples:
-          # rsync -avz dist/ user@staging-server:/var/www/html/
-          # aws s3 sync dist/ s3://staging-bucket/
-          # kubectl apply -f k8s-staging/
-          echo " Successfully deployed to staging"
-
-      - name: Run Smoke Tests
-        run: |
-          echo " Running smoke tests on staging..."
-          # Add smoke tests here
-          # curl -f https://staging.yourapp.com/health || exit 1
-          echo " Smoke tests passed"
-
-  # Job 4: Deploy to Production
-  deploy-production:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    needs: [deploy-staging]
-    if: github.ref == 'refs/heads/master'
-    environment: production
-    
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-files
-
-      - name: Deploy to Production
-        run: |
-          echo "Starting deployment to production..."
-          # Add your production deployment commands here
-          # rsync -avz dist/ user@prod-server:/var/www/html/
-          # aws s3 sync dist/ s3://production-bucket/
-          # kubectl apply -f k8s-production/
-          echo " Successfully deployed to production"
-
-      - name: Run Production Health Check
-        run: |
-          echo " Running production health checks..."
-          # Add health checks here
-          # curl -f https://yourapp.com/health || exit 1
-          echo " Production is healthy"
-
-  # Job 5: Pipeline Summary
   summary:
     name: Pipeline Summary
     runs-on: ubuntu-latest
-    needs: [test, build, deploy-staging, deploy-production]
+    needs: [test]
     if: always()
     
     steps:
       - name: Create Summary
         run: |
-          echo "##  CI/CD Pipeline Results" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "## 🚀 CI Pipeline Results" >> $GITHUB_STEP_SUMMARY
           echo "**Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Author:** ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Job Results:" >> $GITHUB_STEP_SUMMARY
-          echo "-  Tests: ${{ needs.test.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "-  Build: ${{ needs.build.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "-  Staging Deploy: ${{ needs.deploy-staging.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "-  Production Deploy: ${{ needs.deploy-production.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          
-          if [[ "${{ needs.test.result }}" == "success" && "${{ needs.build.result }}" == "success" ]]; then
-            echo " **Pipeline completed successfully!**" >> $GITHUB_STEP_SUMMARY
-          else
-            echo " **Pipeline failed. Check the logs above.**" >> $GITHUB_STEP_SUMMARY
-          fi
-
-  # Job 6: Notify Team
-  notify:
-    name: Notify Team
-    runs-on: ubuntu-latest
-    needs: [test, build, deploy-staging, deploy-production]
-    if: failure()
-    
-    steps:
-      - name: Create Failure Issue
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const title = ' CI/CD Pipeline Failed - ' + context.payload.head_commit?.message || 'Unknown commit';
-            const body = `
-            ##  Pipeline Failure Alert
-            
-            **Branch:** ${{ github.ref_name }}
-            **Commit:** ${{ github.sha }}
-            **Author:** ${{ github.actor }}
-            **Workflow:** ${{ github.workflow }}
-            **Failed Jobs:** Check the workflow run for details
-            
-            ### Job Status:
-            -  Tests: ${{ needs.test.result }}
-            -  Build: ${{ needs.build.result }}
-            -  Staging: ${{ needs.deploy-staging.result }}
-            -  Production: ${{ needs.deploy-production.result }}
-            
-            **Action Required:** Please check the [failed workflow run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) and fix the issues.
-            
-            cc: @${{ github.actor }}
-            `;
-            
-            github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: title,
-              body: body,
-              labels: ['bug', 'ci-failure', 'urgent']
-            })
+          echo "- 🧪 Tests: ${{ needs.test.result }}" >> $GITHUB_STEP_SUMMARY
